--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/runtime": "^7.16.3",
     "@react-native-community/eslint-config": "^3.0.1",
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.177",
     "@types/react-native": "^0.66.5",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.3.1",
@@ -32,6 +33,10 @@
     "react-native": "^0.66.3",
     "react-test-renderer": "^17.0.2",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "react-native-safe-area-context": "^3.3.2"
   },
   "peerDependencies": {
     "react": "*",
