--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "react-native-safe-area-context": "^3.3.2"
+    "lodash": "^4.17.21"
   },
   "peerDependencies": {
     "react": "*",
