--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-native": "^0.66.3"
+    "react-native": "^0.66.3",
+    "react-native-polygonal-menu": "file:.."
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
